--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/phyblas/paint-by-example_comfyui"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "phyblas"
 DisplayName = "paint-by-example_comfyui"
 Icon = ""
